--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Cable Dictionary</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta></meta>
-   <link rel="shortcut icon" type="image/x-icon" href="Assets/logo.png" />
+   <link rel="shortcut icon" type="image/x-icon" href="Assets/logo.png/">
 </head>
 
 <body>
